fix: margin misalignment

--- a/src/components/sliderimage/sliderimage.scss
+++ b/src/components/sliderimage/sliderimage.scss
@@ -22,14 +22,13 @@ $mainfont: Verdana, Geneva, Tahoma, sans-serif;
 
     hr {
         width: 80%;
-        margin: auto;
         border: 2px solid #4BB984;
         border-radius: 40px;
-        margin: 10px 0px 10px 0px;
+        margin: 10px auto 10px auto;
     }
     .modHr {
         width: 50%;
-        margin: 5px 0px 15px 0px;
+        margin: 5px auto 15px auto;
     }
     p {
         width: 85%;
