--- a/src/pages/AdminPage/adminpage.scss
+++ b/src/pages/AdminPage/adminpage.scss
@@ -80,11 +80,10 @@
         text-align: center;
     }
     hr {
-        margin: auto;
         width: 80%;
         border: 2px solid #4BB984;
         border-radius: 30px;
-        margin: 15px 0px 15px 0px;
+        margin: 15px auto 15px auto;
     }
 }
 .setter {
