--- a/src/pages/Landing/landing.scss
+++ b/src/pages/Landing/landing.scss
@@ -80,9 +80,8 @@ $highlightcolor: #4BB984;
     }
     hr {
         width: 70%;
-        margin: auto;
         border: 3px solid $highlightcolor; border-radius: 30px;
-        margin: 20px 0px 20px 0px
+        margin: 20px auto 20px auto
     }
 }
 
